--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/pg": "^8.15.4",
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.44.2",
+    "firebase-admin": "^13.4.0",
     "hono": "^4.7.11",
     "multer": "^2.0.1",
     "pg": "^8.16.0",
